# Funky-VM

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  bindings.h  boxing.c  boxing.h  cpu.c  cpu.h  error_handling.c  error_handling.h  instr_array.c  instr_branching.c  instr_computation.c  instr_convert.c  instr_cpu.c  instr_map.c  instr_mem.c  instr_mod.c  instr_string.c  instructions.c  instructions.h  kernel.asm  liballoc_1_1.h  memory.c  memory.h  modules.c  modules.h  sonar-project.properties  syscall.c  syscall.h  test_vm.sh  vm.c  vm.h
.github/workflows/: cmake.yml  codeql.yml  sonar.yml
docs/: generate_instruction_yaml.py  instructions.yaml
emscripten/: build.sh  init.js  test.funk  test.funk.fasm  test.wckd
include/funkyvm/: cpu.h  funkyvm.h  memory.c  memory.h  modules.h  os.h  syscall.h
src/: bindings.c  bindings.h  funkyvm.c  performance.c  performance.h  version.h
src/libvm/: bindings.h  boxing.c  boxing.h  cpu.c  error_handling.c  error_handling.h  liballoc_1_1.c  liballoc_1_1.h  memory.c  modules.c  os.c  os.h  syscall.c
src/libvm/instructions/: instr_array.c  instr_branching.c  instr_computation.c  instr_convert.c  instr_cpu.c  instr_map.c  instr_mem.c  instr_mod.c  instr_string.c  instructions.c  instructions.h
test/: test_vm.sh
